# CampusConnect

./: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts
.github/scripts/: utils.js
.github/workflows/: 01-claim.yml  02-unclaim.yml  05-pr-check.yml  06-pr-merged.yml  10-stale-issues.yml  11-link-check.yml  13-label-assignment.yml  13-pr-size-labeler.yml  ci.yml  edge-functions.yml  pr-auto-merge.yml
public/model/: turnout_model_config.json
public/workers/: prediction.js  transcode.js
scripts/: train_model.py
services/lsp-backend/: Dockerfile  docker-compose.yml  index.js  package.json
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CreateEventDialog.tsx  EventCard.tsx  EventClusterMap.tsx  LSPEditor.tsx  PromoVideoUploader.tsx  VideoPlayer.tsx
src/hooks/: useLSPClient.ts  useP2PFileShare.ts  useReactQueryReplacement.ts
src/lib/: certificateUtils.test.ts  certificateUtils.ts
src/routes/: __root.tsx  admin.clubs.pending.tsx  auth.tsx  certificates.tsx  challenge.tsx  clubs.$slug.manage.tsx  clubs.$slug.tsx  clubs.index.tsx  clubs.tsx  dashboard.tsx  events.$eventId.tsx  events.tsx  feed.tsx  forgot-password.tsx  index.tsx  settings.tsx  sitemap[.]xml.ts
src/server/: generate-certificate.ts
src/utils/: dateUtils.ts
supabase/: schema.sql  seed.sql
supabase/migrations/: 003_event_start_end_dates.sql  20260724164406_update_reports_rls.sql  20260724170000_email_domain_restriction.sql  20260724180000_club_promotions.sql
(+16 files in other folders)
