[package]
name = "campusconnect-desktop"
version = "1.0.0"
description = "CampusConnect Desktop Application"
authors = ["CampusConnect Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "global-shortcut", "notification", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
